--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,11 @@
     src: url("../public/fonts/Semi-Narrow/3270\ Semi-Narrow\ Nerd\ Font\ Complete\ Mono.otf") format("opentype");
   }
 }
+
+.bg-image {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: linear-gradient(#1118279e 100%, #1118279e), url("nature.webp");
+  background-attachment: fixed;
+}
